Digital/objects/DGTL_Tickets__c.object
<CustomObject>
    <description>This object is used in Digital application</description>
    <label>Tickets</label>
    <nameField>
        <label>Summary</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tickets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Brand__c</fullName>
        <formula>TEXT( Owner:User.DGTL_Brands__c )</formula>
        <label>Brand</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Content_Name__c</fullName>
        <label>Content Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimates__c</fullName>
        <label>Estimates</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expected_Behaviour__c</fullName>
        <label>Expected Behaviour</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Impact_Area__c</fullName>
        <label>Impact Area</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Calendar</fullName>
                </value>
                <value>
                    <fullName>Compare</fullName>
                </value>
                <value>
                    <fullName>Daily Changes</fullName>
                </value>
                <value>
                    <fullName>Layout</fullName>
                </value>
                <value>
                    <fullName>Notification</fullName>
                </value>
                <value>
                    <fullName>Placement Library</fullName>
                </value>
                <value>
                    <fullName>Reports</fullName>
                </value>
                <value>
                    <fullName>Task</fullName>
                </value>
                <value>
                    <fullName>View</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Layout__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Layout</label>
        <referenceTo>Placement_Layout__c</referenceTo>
        <relationshipLabel>Tickets</relationshipLabel>
        <relationshipName>Tickets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Placement_Content__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Placement Content</label>
        <referenceTo>Placement_Content__c</referenceTo>
        <relationshipLabel>Tickets</relationshipLabel>
        <relationshipName>Tickets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Placement_Name__c</fullName>
        <label>Placement Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Problem_Statement__c</fullName>
        <label>Problem Statement</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Data discrepency compared to PDF</fullName>
                </value>
                <value>
                    <fullName>Data discrepency compared to Confluence</fullName>
                </value>
                <value>
                    <fullName>Incorrect Content Type</fullName>
                </value>
                <value>
                    <fullName>Incorrect Copy</fullName>
                </value>
                <value>
                    <fullName>Incorrect Url</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Release_Number__c</fullName>
        <label>Release Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resolution_Comments__c</fullName>
        <label>Resolution Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>In progress</fullName>
                </value>
                <value>
                    <fullName>UAT Testing</fullName>
                </value>
                <value>
                    <fullName>Deployed</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>On Watch</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <formula>TEXT(Owner:User.DGTL_Profile__c)</formula>
        <label>Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Enhancements</fullName>
                </value>
                <value>
                    <fullName>Issue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <recordTypes>
        <fullName>BPM_Enhancements</fullName>
        <active>true</active>
        <label>BPM Enhancements</label>
    </recordTypes>
    <recordTypes>
        <fullName>BPM_Issues</fullName>
        <active>true</active>
        <label>BPM Issues</label>
    </recordTypes>
    <recordTypes>
        <fullName>Data_Issues</fullName>
        <active>true</active>
        <label>Data Issues</label>
    </recordTypes>
    <recordTypes>
        <fullName>Workflow_Enhancements</fullName>
        <active>true</active>
        <label>Workflow Enhancements</label>
    </recordTypes>
    <recordTypes>
        <fullName>Workflow_Issues</fullName>
        <active>true</active>
        <label>Workflow Issues</label>
    </recordTypes>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Priority__c</columns>
        <columns>Status__c</columns>
        <columns>Brand__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <columns>Due_Date__c</columns>
        <columns>Team__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Open_Enhancement</fullName>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>Priority__c</columns>
        <columns>Status__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Deployed</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>DGTL_Tickets__c.Workflow_Enhancements</value>
        </filters>
        <label>All Open Enhancement</label>
    </listViews>
    <listViews>
        <fullName>All_Open_Issues</fullName>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>Priority__c</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Deployed</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>DGTL_Tickets__c.Workflow_Issues</value>
        </filters>
        <label>All Open Issues</label>
    </listViews>
    <listViews>
        <fullName>Issues_Due_This_Month</fullName>
        <columns>NAME</columns>
        <columns>Priority__c</columns>
        <columns>Status__c</columns>
        <columns>Due_Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Deployed</value>
        </filters>
        <filters>
            <field>Due_Date__c</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Issues Due This Month</label>
    </listViews>
    <listViews>
        <fullName>My_Closed_Issues</fullName>
        <columns>NAME</columns>
        <columns>Priority__c</columns>
        <columns>Status__c</columns>
        <columns>Due_Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Deployed</value>
        </filters>
        <label>My Closed Issues</label>
    </listViews>
    <listViews>
        <fullName>My_Open_Issues</fullName>
        <columns>NAME</columns>
        <columns>Priority__c</columns>
        <columns>Status__c</columns>
        <columns>Due_Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Deployed</value>
        </filters>
        <label>My Open Issues</label>
    </listViews>
</CustomObject>